--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="media_key.css">
+  <link rel="stylesheet" href="eletricidade.css">
 </head>
 
 <body>
@@ -144,23 +145,25 @@
         </button></a>
       <br>
     </div>
-<div class="buscas">
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+    <div class="buscas">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+          </div></span>
+      </div>
     </div>
-  </div>
   </div>
   <br>
   <div class="conteudo">
+    <br>
     <div id="center">
-      <h1><strong class="textosTitulo"><em> Eletricidade </em> </strong></h1>
+      <h1 style="font-size: 12pt;">ELETRICIDADE</h1>
     </div>
 
     <br>
     <p class="margem">
       A eletricidade pode ser definida como os fenómenos que ocorrem durante o desequilíbrio ou movimentação das cargas
-      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023). A eletricidade pode
+      elétricas de um átomo, "uma propriedade inerente aos prótons e elétrons” (HELERBROCK,2023).</p> <br>
+    <p class="margem">A eletricidade pode
       ser dividida entre fenômenos eletrostáticos e eletrodinâmicos, referentes às cargas em repouso e em movimento. A
       eletricidade também pode ser compreendida como “todos os efeitos que as cargas elétricas produzem sobre a matéria”
       (HELERBROCK, 2023).
@@ -177,11 +180,13 @@
     <br>
     <p class="margem">
       É comum ver a “eletricidade empregada como a quantidade de energia consumida nos circuitos elétricos”
-      (HELERBROCK,2023). Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica,
+      (HELERBROCK,2023).</p><br>
+    <p class="margem"> Essa energia é chamada de energia potencial elétrica, calculada através da potência elétrica,
       que
       trata-se da energia elétrica consumida por um dispositivo a cada segundo. A energia potencial elétrica é comumente
       medida em KWh, que é uma unidade utilizada principalmente pelas companhias de distribuição de energia elétrica, e
-      além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J.
+      além do KWh, essa energia também pode ser medida em joules, a proporção entre essas unidades é: 1KWh = 3,6.10^6 J
+      (HELERBROCK,2023).
     </p>
 
     <br>
@@ -189,16 +194,44 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/OIG (1).jpeg" width="75%" alt="Foto Satelite">
-      <legend style="text-align: center;"><a
-          href="https://www.bing.com/images/create/zeus--thunder/6445a481b46741e8889a08fc1d68ba2b?id=vKgb%2ffDZBHfGTVxRoNOc0Q%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&ajaxhist=0&ajaxserp=0">
-          Imagem Dísponivel
-          Aqui</a>
-      </legend>
-    </div>
-  </div>
+      <img src="Imagens/OIG (1).jpeg" width="50%" alt="Foto Satelite">
 
-  <div class="rodape"></div>
+    </div>
+    <legend class="ref-imagens7">
+      <P>Fonte: HELERBROCK, 2023.
+      </P>
+    </legend>
+    <br>
+    <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+    <br>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">HELERBROCK, Rafael.
+      <strong class="bibliografia">"Eletricidade"</strong> Brasil Escola. Disponível em:
+      https://brasilescola.uol.com.br/fisica/eletricidade.htm. Acesso em 21 de agosto de 2023.
+    </p>
+    <br>
+
+    <br>
+  </div>
+  <br>
+  <div class="rodape">
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+
+
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+    </div>
 
 </body>
 
