--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="media_key.css">
+  <link rel="stylesheet" href="eletricidade.css">
 </head>
 
 <body>
@@ -144,17 +145,21 @@
         </button></a>
       <br>
     </div>
-<div class="buscas">
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+    <div class="buscas">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+          </div></span>
+      </div>
     </div>
-  </div>
   </div>
   <br>
   <div class="conteudo">
     <div id="center">
-      <h1><strong class="textosTitulo"><em> Correntes Elétricas </em> </strong></h1>
+      <br>
+
+      <h1 style="font-size: 12pt;">CORRENTES ELÉTRICAS</h1>
+
+
     </div>
     <br>
     <p>
@@ -166,7 +171,7 @@
     <p class="margem">
       Para que ocorra esse movimento o sistema apresenta uma diferença de potencial elétrico(ddp) ou tensão elétrica.
       Quando a energia elétrica passa por resistores ela pode ser transformada em energia térmica, este fenômeno é
-      conhecido como Efeito Joule.(GOUVEIA,2023) 
+      conhecido como Efeito Joule.(GOUVEIA,2023)
     </p>
     <br>
     <p class="margem">
@@ -191,13 +196,13 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite">
-      <legend style="text-align: center;"><a
-          href="https://www.manualdaeletronica.com.br/o-que-e-corrente-eletrica-formulas-caracteristicas/">
-          Imagem Dísponivel
-          Aqui</a>
-      </legend>
+      <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite" style="width: 51%;">
+
     </div>
+    <legend class="ref-imagens7">
+      <P>Fonte: ALVES, 2019.
+      </P>
+    </legend>
     <br>
     <p class="margem">A tensão elétrica de um circuito refere-se à diferença do potencial elétrico de dois pontos de um
       condutor, de
@@ -238,9 +243,45 @@
     </p>
     <p class="margem"> ∆t: variação do tempo (h)
     </p>
+    <br>
+    <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">ALVES, Pedro. <strong class="bibliografia">“O que
+        é corrente elétrica? Fórmulas e características”</strong>. “Manual da Eletrônica”. Disponível em: O que é
+      corrente elétrica? Fórmulas e características! (manualdaeletronica.com.br). Acesso em 23 de março de 2023.
+    </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> GOUVEIA, Rosimar. <strong
+        class="bibliografia">“Corrente Elétrica”</strong>. “Toda Matéria”. Disponível em
+      https://www.todamateria.com.br/corrente-eletrica/. Acesso em 23 de março de 2023.
+    </p>
+    <br>
+    <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong
+        class="bibliografia">“Corrente Elétrica”</strong>. “Brasil Escola" Disponível em:
+      https://brasilescola.uol.com.br/fisica/corrente-eletrica.htm. Acesso em 23 de março de 2023.
+    </p>
+    <br>
   </div>
+  </div>
+  <br>
+  <div class="rodape">
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
 
-  <div class="rodape"></div>
+
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+    </div>
 
 </body>
 
