--- a/TermoFisica.html
+++ b/TermoFisica.html
@@ -283,7 +283,27 @@
     <br>
     <p class="margem">Nesta imagem vemos os três tipos de espalhamento do calor ao mesmo tempo.</p>
   </div>
-  <div class="rodape"></div>
+  <<div class="rodape">
+
+    <div class="texto-rodape">
+      <div class="parte-rodape-esquerdo">
+        <strong class="cabeca12">
+          <h4>Desenvolvedores:
+          </h4>
+          <p>Anthony Gabriel Loche dos Reis</p>
+          <p>Claudio Anzini Neto</p>
+          <p>Gustavo Correa Kruger</p>
+          <p>Pedro Henrique da Silva Malaquias</p>
+          <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
+        </strong>
+      </div>
+
+
+      <div class="parte-rodape-direito"><strong class="cabeca12"><img src="Imagens/Logo_IFC_horizontal.gif"
+            alt="Logo IFC" width="300px"></strong></div>
+
+    </div>
+  </div>
 
 </body>
 
