--- a/Dinamica.html
+++ b/Dinamica.html
@@ -151,20 +151,25 @@
     </div>
   </div>
   </div>
+ 
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Dinamica </em> </strong></h1>
+      <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> DINÂMICA </h1>
+    
+    </div>
     <br>
     <p>Dinâmica é o ramo da física que estuda as leis que governam o movimento dos corpos e as causas desse
       movimento.Essas leis são descritas pelas três leis de Newton, também conhecidas como as leis do
       movimento.(HELERBROCK, 2023).</p>
     <br>
+  
     <div id="center">
-      <img src="Imagens/tipos-de-forca.webp" alt="Foto Satelite">
-      <legend style="text-align: center;"><a
-          href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem
-          Dísponivel
-          Aqui</a></legend>
+      <p><strong class="bibliografia">Figura 1:</strong> Força</p>
+      <img src="Imagens/tipos-de-forca.webp" alt="Isaac Newton" width="35%">
     </div>
+    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
+    </legend>
     <br>
 
     <p class="margem">Segundo Pedro Loos(2022), a primeira lei de Newton, também chamada de lei da inércia, diz que um
@@ -188,13 +193,19 @@
       estruturas.(HELERBROCK, 2023).</p>
     <br>
     <div id="center">
-      <img src="Imagens/flight-sky-earth-space.jpg" alt="Foto Satelite" width="600px" style="margin-left: 110px;">
-      <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/foguete-branco-2159/"> Imagem
-          Dísponivel
-          Aqui</a></legend>
+      <p><strong class="bibliografia">Figura 2:</strong> Foguete</p>
+      <img src="Imagens/flight-sky-earth-space.jpg" alt="Isaac Newton" width="35%">
+    </div>
+    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
+    </legend>
+
+
+    <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> ESTÁTICA </h1>
+    
     </div>
     <br>
-    <h1><strong class="textosTitulo"><em> Estatica </em> </strong></h1>
     <p class="margem">De acordo com Prof. Eduardo Nobre Lages, A estática é o ramo da física que estuda o equilíbrio de
       corpos em repouso sob a ação de forças, segundo a primeira lei de Newton, quando um sistema está em equilíbrio,
       todas as suas partes também estarão. Com isso em mente, um corpo está em equilíbrio quando sua resultante de
@@ -202,12 +213,16 @@
     </p>
     <br>
     <div id="center">
-      <img src="Imagens/Pedra.jpeg" alt="Foto Satelite">
-      <legend style="text-align: center;"><a href="Imagens/Pedra.jpeg"> Imagem
-          Dísponivel
-          Aqui</a></legend>
+      <p><strong class="bibliografia">Figura 3:</strong> Pedra</p>
+      <img src="Imagens/Pedra.jpeg" alt="Isaac Newton" width="35%">
     </div>
+    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
+    </legend>
+    <br>
+    </div>
+    <br>
   </div>
+
 
 
 
