--- a/MecanicaRe.html
+++ b/MecanicaRe.html
@@ -151,182 +151,72 @@
     </div>
   </div>
   </div>
-  <br>
-  <div class="conteudo">
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> MECÂNICA </h1>
-    </div>
-
-    <br>
-    <p class="margem">
-      “Segundo Rafael Helerbrock : Mecânica é
-      uma grande área da física que se concentra no
-      estudo do movimento e repouso dos corpos,
-      estejam estes ou não sob a ação de forças."
-
-      <br>
-    </p>
-    <br>
-    <p class="margem">Sendo dividida em mecânica clássica, relativística e quântica.
-      A mecânica, assim como qualquer área da física, sofreu diversas alterações durante o tempo, as bases do que
-      chamamos de “mecânica clássica” foram publicadas por Galileu Galilei, Johannes Kepler e Isaac Newton, e no século
-      XX sofreu alterações sendo apresentada a mecânica relativística por Albert Einstein, onde era levado em conta
-      movimentos próximos à da luz junto a mecânica clássica. Entre 1925 e 1926 foi apresentada a “mecânica quântica”
-      pelas contribuições de Heisenberg, Born, Jordan, Dirac, Pauli, Wiener, Schrödinger e outros.(HELERBROCK, 2023).
-    </p>
-
-    <br>
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> O QUE ELA ESTUDA? </h1>
-    </div>
-    <br>
-    <p class="margem">
-      A mecânica é um ramo da física que estuda o movimento e o comportamento dos objetos sob a influência da força, ou
-      seja, todo e qualquer movimento provocado por determinado corpo que sofre a influência de determinada
-      força.(HELERBROCK, 2023).
-    </p>
-    <br>
-    
-    <br>
-    <div id="center">
-      <p><strong class="bibliografia">Figura 1:</strong> Sátelite</p>
-      <img src="Imagens/mecanicafoto1.jpeg" alt="Isaac Newton" width="35%">
-    </div>
-    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
-    </legend>
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> MECÂNICA CLÁSSICA </h1>
-    </div>
-    <br>
-    <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
-      Inércia.
-      (HELERBROCK, Rafael, 2023).
-    </p>
-    <br>
-    <p class="margem">
-      A mecânica clássica estuda as variações de força e energia que atuam sobre um corpo, sendo desenvolvida antes do
-      século XX e por consequência antes da mecânica relativística, suas análises levam em consideração apenas objetos
-      que não estão perto da velocidade da luz, sendo uma ótima escolha para estudar nosso cotidiano. (FERNANDES, 2023).
-      Exemplos: podemos calcular a velocidade de carros, a pressão de uma torneira além de ser a base para o
-      funcionamento dos computadores e celulares.
-    </p>
-    <br>
-    <p class="margem"> Mas FISICAMENTE FALANDO, a Lei da Inércia significa que: se algo está parado esse algo pretende
-      ficar parado,
-      até venha alguém mexer nele, exemplo, seu celular, se você deixar ele no sofá ele ficará lá até alguém pegar ele,
-      sem uma força exterior ele continuará parado, e o mesmo se aplica para corpos em movimento, mas para dar um
-      exemplo precisamos ir lá pro espaço, já que lá não tem ar nem gravidade para nos atrapalhar, agora dando o
-      exemplo, voce esta la no espaço e joga uma caneta para qualquer lado, essa caneta irá continuar para sempre
-      viajando na velocidade que você jogou ela até que uma força exterior atravesse o caminho dela(como um asteroide,
-      ou a caneta entrar em órbita de um objeto grande, apesar da massa da caneta não ser suficiente para ela entrar em
-      órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
-    </p>
-    <br>
-
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> MOVIMENTO RETILÍNIO UNIFORME (MRU) </h1>
-    </div>
-    
-    <br>
-    <p class="margem">
-      Segundo o Prof. Augusto Melo(2023), o movimento uniforme é um tipo de movimento em que um objeto percorre
-      distâncias iguais em intervalos de tempo iguais, mantendo a mesma velocidade. Sendo assim a velocidade permanece
-      constante e invariável por todo trajeto além de sua trajetória ser uma reta.
-      A equação que descreve o movimento é:
-      <br>
-      <br>
-
-      <div id="center">
-        <h1 style="font-size: 12pt;"> S = s0 + V * t </h1>
-      </div>
   
-    <br>
-    <p class="margem"> S =é a posição final do objeto em relação a um ponto de referência.</p>
-    <p class="margem"> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
-    </p>
-    <p class="margem"> V= é a velocidade constante do objeto.</p>
-    <p class="margem"> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> MOVIMENTO RETILÍNIO UNIFORMEMENTE VARIADO (MRUV) </h1>
-    </div>
-    <br>
-    <p class="margem"> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob
-      a ação de uma
-      aceleração constante, ou seja, a velocidade aumenta ou diminui, contudo a aceleração permanece a mesma.(MARTINS,
-      2023) .
-      A equação da cinemática que descreve o movimento uniformemente variado é dada por:
+    <div class="conteudo">
       <br>
+<div id="center">
+    <h1 style="font-size: 15pt;"> MECÂNICA RELATIVISTA </h1>
+  </div>
+        <br>
+        <p class="margem">A mecânica relativista é a parte da física que estuda o movimento de objetos em altas velocidades próximas à
+            velocidade da luz. A mecânica relativista é baseada nas teorias da relatividade restrita, propostas por
+            Albert Einstein em 1905 e finalizada em 1915 com a teoria da relatividade geral.(GOUVEIA, 2023).</p>
+        <br>
+
+        <div id="center">
+          <h1 style="font-size: 15pt;"> RESTRITA </h1>
+        </div>
+        <br>
+
+        <p class="margem">
+            Segundo Prof. Rosimar Gouveia, a relatividade restrita diz que as leis da física são as mesmas para todos os
+            observadores em movimento uniforme (dinâmica estudada anteriormente na página), independentemente da
+            velocidade relativa entre eles. Isso significa que as leis da física devem levar em consideração que não
+            mudam com a velocidade do observador.(GOUVEIA, 2023).
+        </p>
+        <br>
+        <div id="center">
+          <h1 style="font-size: 15pt;"> GERAL </h1>
+        </div>
+        <br>
+        <p class="margem"> A teoria da relatividade geral leva em consideração um observador em movimento variável próximo a velocidade
+            da luz, o que a teoria da relatividade restrita não considerava. (GOUVEIA, 2023). Principal Fórmula: E= mc²
+        </p>
+
+        <p>
+        <p class="margem">E= energia em repouso.
+        </p>
+        <p class="margem"> m= massa.
+        </p>
+        <p class="margem"> c²= velocidade da luz no vácuo.</p>
+        <br>
+        <div id="center">
+          <p><strong class="bibliografia">Figura 2:</strong> ESPAÇO</p>
+          <img src="Imagens/fotorelatividade.jpg" alt="Isaac Newton" width="35%">
+        </div>
+        <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
+        </legend>
+        <br>
+        <div id="center">
+          <h1 style="font-size: 15pt;"> CINEMÁTICO </h1>
+        </div>
       <br>
-      <div id="center">
-        <h1 style="font-size: 12pt;"> S = S0 + V0*t + (1/2)at^2 </h1>
-      </div>
-      <br>
-    <br>
-    <div id="center">
-      <h1 style="font-size: 12pt;"> MOVIMENTO CIRCULAR UNIFORME </h1>
-    </div>
   
-    <br>
-    <p class="margem"> No vídeo Movimento Circular Uniforme - Aula 01 do canal
-      Davi Oliveira - Física 2.0, é apresentado que o movimento circular uniforme é um tipo de movimento em que um
-      objeto se move em uma trajetória circular com velocidade constante, a velocidade tangencial ( velocidade
-      instantânea do objeto considerado) em qualquer ponto da rota permanece a mesma, contudo a sua direção muda
-      continuamente em direção ao centro da circunferência.(OLIVEIRA, 2023).
-      A equação desse movimento é:
-    </p>
-    <br>
-    <div id="center">
-      <h1 style="font-size: 15pt;"> θ = ω*t </h1>
-    </div>
-    <br>
-
-
-    <p class="margem"> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
-    <p class="margem"> ω é a velocidade angular do objeto.</p>
-    <p class="margem"> t é o tempo decorrido desde o início do movimento.</p>
-    </p>
-    <br>
-
-
-    <h3>Tópicos em Mecanica</h3>
-    <br>
-    <a href="MecanicaRe.html"><button type="button" class="btn">
-        <strong>Mecanica Relativista</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Dinamica.html"><button type="button" class="btn">
-        <strong>Dinamica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-  </div>
+      <p class="margem">A cinemática é uma parte da mecânica que estuda o movimento dos objetos, sem se preocupar com as causas desse
+        movimento, ou seja, sem considerar as forças que atuam sobre o objeto. A cinemática se preocupa em descrever o
+        movimento em termos de posição, velocidade e aceleração do objeto, bem como a trajetória que ele percorre.(DIAS,
+        2023).</p>
   <br>
+  <div id="center">
+    <p><strong class="bibliografia">Figura 3:</strong> FORÇAS</p>
+    <img src="Imagens/fotomecanica2.webp" alt="Isaac Newton" width="35%">
   </div>
+  <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
+  </legend>
+  <BR></BR>
+    </div>
 
-
-
-
-
-  <div class="rodape"></div>
+    <div class="rodape"></div>
 
 </body>
 
