--- a/Mecanica.html
+++ b/Mecanica.html
@@ -152,9 +152,12 @@
   </div>
   </div>
   <div class="conteudo">
+    <br>
     <div id="center">
-      <h1><strong class="textosTitulo"><em> Mecânica </em> </strong></h1>
+
+      <h1 style="font-size: 12pt;"> MECÂNICA </h1>
     </div>
+
     <br>
     <p class="margem">
       “Segundo Rafael Helerbrock : Mecânica é
@@ -172,11 +175,10 @@
       movimentos próximos à da luz junto a mecânica clássica. Entre 1925 e 1926 foi apresentada a “mecânica quântica”
       pelas contribuições de Heisenberg, Born, Jordan, Dirac, Pauli, Wiener, Schrödinger e outros.(HELERBROCK, 2023).
     </p>
-
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo">O que ela Estuda?
-        </strong></h3>
+
+      <h1 style="font-size: 12pt;"> O QUE ELA ESTUDA? </h1>
     </div>
     <br>
     <p class="margem">
@@ -185,14 +187,15 @@
       força.(HELERBROCK, 2023).
     </p>
     <br>
-    <img src="Imagens/mecanicafoto1.jpeg" width="100%" alt="Foto Satelite"><a
-      href="https://www.pexels.com/pt-br/foto/astronauta-cosmonauta-astronomia-atmosfera-586056/"> Imagem Dísponivel
-      Aqui</a>
+    <div id="center">
+      <p><strong class="bibliografia">Figura 1:</strong> SATÉLITE</p>
+      <img src="Imagens/mecanicafoto1.jpeg" alt="Isaac Newton" width="35%">
+    </div>
+    <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
     </legend>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo">Mecânica Clássica
-        </strong></h3>
+      <h1 style="font-size: 12pt;"> MECÂNICA CLÁSSICA </h1>
     </div>
     <br>
     <p class="margem"> A primeira Lei de Newton é chamada de princípio da inércia, mas é mais conhecida como Lei da
@@ -222,7 +225,7 @@
 
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo">Movimento Retilíneo Uniforme (MRU) </strong></h3>
+      <h1 style="font-size: 12pt;"> MOVIMENTO RETILÍNEO UNIFORME (MRU) </h1>
     </div>
     <br>
     <p class="margem">
@@ -232,9 +235,9 @@
       A equação que descreve o movimento é:
       <br>
       <br>
-    <div id="center">
-      <h3> <strong class="textosTitulo">S = s0 + V * t</strong> </h3>
-    </div>
+      <div id="center">
+        <h1 style="font-size: 12pt;"> S = s0 + V * t </h1>
+      </div>
     <br>
     <p class="margem"> S =é a posição final do objeto em relação a um ponto de referência.</p>
     <p class="margem"> s0=é a posição inicial do objeto em relação ao mesmo ponto de referência
@@ -243,25 +246,28 @@
     <p class="margem"> t = é o tempo em que o objeto levou para percorrer a trajetória.</p>
     <br>
     <div id="center">
-      <h3><strong class="textosTitulo">Movimento Retilíneo Uniformemente Variado (MRUV) </strong></h3>
+      <h1 style="font-size: 12pt;"> MOVIMENTO RETILÍNEO UNIFORMEMENTE VARIADO (MRUV) </h1>
     </div>
+    <br>
+
     <p class="margem"> um tipo de movimento em que a velocidade de um objeto varia uniformemente ao longo do tempo, sob
       a ação de uma
       aceleração constante, ou seja, a velocidade aumenta ou diminui, contudo a aceleração permanece a mesma.(MARTINS,
       2023) .
       A equação da cinemática que descreve o movimento uniformemente variado é dada por:
       <br>
-    <div id="center">
-      <p class="margem"> <strong class="textosTitulo"> S = S0 + V0*t + (1/2)at^2</strong></p>
-    </div>
-    <hr>
-    <br>
-    <div id="center">
-      <h3><strong class="textosTitulo"> Movimento Circular Uniforme (MCU)
+      <br>
+      <div id="center">
+        <h1 style="font-size: 12pt;"> S = S0 + V0*t + (1/2)at^2 </h1>
+      </div>
 
-        </strong></h3>
+    <br>
+    <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> MOVIMENTO CIRCULAR UNIFORME (MCU) </h1>
     </div>
     <br>
+
     <p class="margem"> No vídeo Movimento Circular Uniforme - Aula 01 do canal
       Davi Oliveira - Física 2.0, é apresentado que o movimento circular uniforme é um tipo de movimento em que um
       objeto se move em uma trajetória circular com velocidade constante, a velocidade tangencial ( velocidade
@@ -269,9 +275,11 @@
       continuamente em direção ao centro da circunferência.(OLIVEIRA, 2023).
       A equação desse movimento é:
     </p>
-    <p class="margem"> <strong class="textosTitulo"> θ = ω*t
-      </strong></p>
-
+    <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;"> θ = ω*t </h1>
+    </div>
+    <br>
 
 
     <p class="margem"> θ é o ângulo percorrido pelo objeto na trajetória circular.</p>
@@ -280,35 +288,37 @@
     </p>
     <br>
 
-
-    <h3>Tópicos em Mecanica</h3>
+    <div id="center">
+      <h3>Tópicos em Mecanica</h3>
+      <br>
+      <a href="MecanicaRe.html"><button type="button" class="btn">
+          <strong>Mecanica Relativista</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+  
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Dinamica.html"><button type="button" class="btn">
+          <strong>Dinamica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
+  
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+    </div>
     <br>
-    <a href="MecanicaRe.html"><button type="button" class="btn">
-        <strong>Mecanica Relativista</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Dinamica.html"><button type="button" class="btn">
-        <strong>Dinamica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
-
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-  </div>
-  <br>
-  </div>
+    </div>
+    </div>
+   
 
 
 
