--- a/Optica.html
+++ b/Optica.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="media_key.css">
+  <link rel="stylesheet" href="eletricidade.css">
 </head>
 
 <body>
@@ -144,12 +145,12 @@
         </button></a>
       <br>
     </div>
-<div class="buscas">
-    <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+    <div class="buscas">
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+          </div></span>
+      </div>
     </div>
-  </div>
   </div>
   <div class="conteudo">
     <div id="center">
@@ -319,7 +320,33 @@
           Aqui</a>
       </legend>
     </div>
-  </div>
+  <br>
+  <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+  <br>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> HELERBROCK, Rafael. <strong
+    class="bibliografia"> ”Óptica”. </strong> Mundo educação
+    Disponível em: https://mundoeducacao.uol.com.br/fisica/optica.htm  Acesso em: 24 mar. 2023.    
+</p>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">
+    TEIXEIRA, Mariane Mendes. <strong class="bibliografia">"O que é Óptica Geométrica?" </strong> Brasil Escola. Disponível em: https://brasilescola.uol.com.br/o-que-e/fisica/o-que-e-optica-geometrica.htm.  Acesso em 26 de março de 2023.
+
+  </p>
+  <br>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">MARQUES,Gil da Costa; MELLO,Luiz Adolfo.<strong class="bibliografia">
+    “Óptica Curso de Extensão”.</strong>  ri.ufs.br Disponível em: https://ri.ufs.br/bitstream/riufs/11378/2/OpticaCursoExtensao.pdf. Acesso em: 31 de março de 2023
+
+  </p>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> PRAVALER. <strong
+    class="bibliografia"> “Luz – fontes, propagação e principais fenômenos ópticos” . </strong>  Pravaler Disponível em: https://www.pravaler.com.br/luz-fontes-propagacao-e-principais-fenomenos-opticos/. Acesso em : 2 de abril de 2023.
+</p>
+<br>
+</div>
+<br>
+
   <div class="rodape">
 
     <div class="texto-rodape">
@@ -341,7 +368,7 @@
 
     </div>
   </div>
-
+</div>
 </body>
 
 </html>
