--- a/sambaqui.html
+++ b/sambaqui.html
@@ -185,8 +185,113 @@
       Eles eram Homo Sapiens, por que tem relatos a partir de que o primeiro sambaqui foi “construído” em aproximadamente 9 mil anos atrás, e tem relatos de homo sapiens entre 350 mil e 200 mil anos atrás, então certamente são Homo Sapiens (Tiradas das aulas do Professor Ivan Furmann).
     </p>
     <br>
+    <div id="center">
+      <h1 style="font-size: 12pt;">Como esse povo chegou até a América? E, pelos elementos que existem na arqueologia, quando habitaram a região da Baía da Babitonga?
+      </h1>
+    </div>
+    <br>
+    <p class="margem">
+      Como apresentado pelo Professor Ivan, este povo possuía traços extremamente asiáticos, tendo muita similaridade com os povos originários, popularmente chamados de Índios. Por este motivo e também por datação arqueológica, é muito teorizado que o povo sambaqui tenha vindo pelo Estreito de Bering. Já a duração Sambaquis é de aproximadamente de 3 mil a 5 mil anos atrás.
+    </p>
+    <div id="center">
+      <h1 style="font-size: 12pt;">Qual era a principal fonte de alimentação deles? Como se sabe essa informação?</h1>
+    </div>
+    <br>
+    <p class="margem">
+      Conforme explicado na aula de história com o Professor Ivan Furmann, a principal fonte era a pesca, porque eles viviam em áreas costeiras próximas ao mar. Eu sei dessa informação pois o professor Ivan Furmann e a monitora e pesquisadora Ana Claudia Bruhmuller, falaram sobre isso na visita do museu do sambaqui em Joinville.
+    </p>
+    <br>
+    <div class="center">
+      <h1 style="font-size: 12pt;">
+        O que é um zoólito: Explique e apresente alguma foto que contenha um exemplo de um deles.
+      </h1>
+    </div>
+      <br>
+      <p class="margem">
+      Os Zoólitos são esculturas talhadas em pedra, elas têm valor arqueológico e artístico (Retirado das aulas do Professor Ivan).
+      </p>
+      <div id="center">
+        <p><strong class="bibliografia">Figura 2:</strong>Zoólitos</p>
+      <img src="Imagens/sambaqui img3.jpeg" alt="Zoólitos" width="35%">
+      </div>
+      <legend class="ref-imagens">Fonte: Dos autores, 2023.
+      </legend>
+      <div id="center">
+        <h1 style="font-size: 12pt;">Todo sambaqui contém sepultamentos? Explique.</h1>
+      </div>
+      <br>
+      <p class="margem">
+        Arqueologicamente já foram encontrados restos alimentares, ferramentas, armas, adornos e sepultamentos dos que viveram ali. Então sim contém sepultamentos. (SAMBAQUIS - ARQUEOLOGIA BRASILEIRA. [s. d.]. Museu Nacional - UFRJ, 2023).
+      </p>
+      <br>
+      <div id="center">
+        <p><strong class="bibliografia">Figura 3:</strong>Mundo simbólico sepultamentos</p>
+      <img src="Imagens/Sambaqui img4.jpeg" alt="Mundo simbólico sepultamentos" width="35%">
+      </div>
+      <legend class="ref-imagens">Fonte: Dos autores, 2023.
+      </legend>
+      <br>
+      <div id="center">
+        <h1 style="font-size: 12pt;">Existem outras partes do Brasil e do Mundo que contenham construções humanas parecidas com as dos Sambaquis da região da Baía da Babitonga? Explique.</h1>
+      </div>
+      <br>
+      <p class="margem">
+        Sim, em várias regiões costeiras pelo mundo como desde a Austrália e Nova Zelândia e outras ilhas da Oceania à África, América do Norte e Europa e geralmente são chamados de “shell mound” ou “shell middens” . Já no Brasil, além da região da Baía da Babitonga, temos nas regiões costeiras do sudeste brasileiro como nos estados do Rio de Janeiro e São Paulo, assim como mais ao sul, em Santa Catarina e Paraná principalmente. (DE CASTILHO, 2008)
+      </p>
+      <br>
+      <div id="center">
+        <p><strong class="bibliografia">Figura 4:</strong>Amontoados de conchas no mundo</p>
+      <img src="Imagens/Sambaqui img5.jpeg" alt="Amontoados de conchas no mundo" width="35%">
+      </div>
+      <legend class="ref-imagens">Fonte: Dos autores, 2023.
+      </legend>
+      <br>
+      <div id="center">
+        <h1 style="font-size: 12pt;">
+          Todos os sambaquis encontrados estão intactos ou alguns já foram destruídos? Como isso aconteceu?
+        </h1>
+      </div>
+      <br>
+      <p class="margem">
+        Segundo Ana Claudia Bruhmuller, alguns já foram destruídos, outros intactos, pois teve a exploração descuidada, alguns por causa natural de desastres, e outros por causa de destruição sem consentimento que aquilo era um sambaqui, etc.
+      </p>
+      <br>
+      <div id="center">
+        <p><strong class="bibliografia">Figura 5:</strong>Preservação do patrimônio arqueológico</p>
+      <img src="Imagens/Sambaqui img6.jpeg" alt="Preservação do patrimônio arqueológico" width="35%">
+      </div>
+      <legend class="ref-imagens">Fonte: Dos autores, 2023.
+      </legend>
+      <br>
+      <div id="center">
+        <h1 style="font-size: 12pt;">
+          Qual a importância de preservar os sambaquis?
+        </h1>
+      </div>
+      <p class="margem">
+        “... Sua importância significativa na construção simbólica da paisagem, referenciando a territorialidade e a organização social das comunidades de pescadores assentadas no entorno desta região lagunar ao longo de vários milênios.” (DE BLASIS, KNEIP, SCHEEL-YBERT, GIANNINI e GASPAR, 2007)
+      </p>
+  <br>
+  <h1 style="margin-left: 3cm ;"> Refêrencias </h1>
+  <br>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> DE CASTILHO, Pedro V. <strong
+    class="bibliografia">  Utilization of cetaceans in shell mounds from the southern coast of Brazil. 2008. </strong> Disponível em: https://www.sciencedirect.com/science/article/pii/S1040618207002704. Acesso em: 25 Abr. 2023.
+</p>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;">
+    DE BLASIS, Paulo; KNEIP, Andreas; SCHEEL-YBERT, Rita; GIANNINNI, Paulo C.; GASPAR, Maria  <strong class="bibliografia">D. SAMBAQUIS E PAISAGEM: Dinâmica natural e arqueologia regional no litoral do sul do Brasil. </strong> Disponível em: https://scholar.google.com.br/scholar?hl=pt-BR&as_sdt=0%2C5&q=a+importancia+do+sambaqui&bt .Acesso em: 1 de Ago. 2023. 
+  </p>
+  <br>
+  <br>
+  <p style="margin-left: 3cm; margin-right: 2cm; line-height: 1.5;"> SAMBAQUIS - ARQUEOLOGIA BRASILEIRA. [s. d.] <strong class="bibliografia">
+    Museu Nacional - UFRJ. </strong> Disponível em: https://museunacional.ufrj.br/dir/exposicoes/arqueologia/arqueologia-brasileira/sambaquis.html.
+    Acesso em: 25 Abr. 2023. 
     
-  </div>/*Final do conteudo*/
+  </p>
+  <br>
+</div>
+<br>
 
   <div class="rodape">
 
@@ -202,5 +307,6 @@
           <p>Professor/Orientador: Doutor Naylor Garcia Bachiega</p>
         </strong>
       </div>
+    </div>
 </body>
 </html>
