--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <h1 style="text-align: center;">Tópicos</h1>
       <a href="Ondas.html"><button type="button" class="btn">
           <strong>Ondas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -38,11 +38,11 @@
       <a href="Leis De Newton.html">
         <button type="button" class="btn">
           <strong>Leis de Newton</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -50,11 +50,11 @@
       <a href="Mecanica.html">
         <br><button type="button" class="btn">
           <strong>Mecânica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -62,11 +62,11 @@
       <a href="Energia.html">
         <br><button type="button" class="btn">
           <strong>Energia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -74,11 +74,11 @@
       <a href="Eletricidade.html">
         <br><button type="button" class="btn">
           <strong>Eletricidade</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -86,11 +86,11 @@
       <a href="CorrentesEletricas.html">
         <br><button type="button" class="btn">
           <strong>Correntes Elétricas</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -98,22 +98,22 @@
       <a href="TermoFisica.html">
         <br><button type="button" class="btn">
           <strong>Termofísica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
         </button></a>
       <br><a href="Optica.html"><button type="button" class="btn">
           <strong>Óptica</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -121,11 +121,11 @@
       <br>
       <a href="Bibliografia.html"><button type="button" class="btn">
           <strong>Bibliografia</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -133,11 +133,11 @@
       <br>
       <a href="sambaqui.html"><button type="button" class="btn">
           <strong>Sambaqui</strong>
-          <div id="container-stars">
-            <div id="stars"></div>
+          <div class="container-stars">
+            <div class="stars"></div>
           </div>
 
-          <div id="glow">
+          <div class="glow">
             <div class="circle"></div>
             <div class="circle"></div>
           </div>
@@ -146,8 +146,7 @@
     </div>
 <div class="buscas">
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
-        </div></span>
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;</span>
     </div>
   </div>
   </div>
@@ -156,7 +155,7 @@
   <div class="parteIndex">
     <br>
     <h1 style="font-size: 70px;"> O Melhor Site Para Você Aprender Física</h1>
-    <div id="center">
+    <div class="center">
       <br>
       <button type="button" class="btn1" style="width: 300px;" onclick="click_starwars();">
         <strong style="font-size: 20px; color: white;">Definição de Física</strong>
@@ -191,7 +190,7 @@
     </div>
     <br>
     <div id="caixa4"><strong class="cabeca1">Quem Fez o Site?</strong>
-      <div id="center">
+      <div class="center">
         <br><br>
         <p class="caixas">
           Anthony Gabriel Loche dos Reis
@@ -213,7 +212,7 @@
   </div>
   <br>
   <br>
-  <div id="center">
+  <div class="center">
     <h1><strong class="cabeca-white">
         Assuntos
       </strong></h1>
