Update Leis De Newton.html

--- a/Leis De Newton.html
+++ b/Leis De Newton.html
@@ -154,7 +154,7 @@
   <br> 
   <div class="conteudo">
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> LEIS DE NEWTON </h1>
     </div>
     <br>
@@ -166,7 +166,7 @@
       <br>
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 1:</strong> Isaac Newton</p>
       <img src="Imagens/isaacnewton2.webp" alt="Isaac Newton" width="35%">
     </div>
@@ -174,7 +174,7 @@
     <legend class="ref-imagens">Fonte: GOUVEIA, 2023.
     </legend>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;">PRIMEIRA LEI DE NEWTON - LEI DA INÉRCIA
       </h1>
     </div>
@@ -202,7 +202,7 @@
       órbita, ao nao ser que seja de outro objeto pequeno) (HELERBROCK, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 2:</strong> Analogia a Primeira Lei de Newton </p>
       <img src="Imagens/tirinha.jpg" alt="Analogia a Primeira Lei de Newton" width="80%">
     </div>
@@ -210,7 +210,7 @@
       <p>Fonte: MARTINS, 2023.</p>
     </legend>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> SEGUNDA LEI DE NEWTON:
       </h1>
       <h1 style="font-size: 12pt;"> PRICÍPIO FUNDAMENTAL DA DINÂMICA
@@ -247,14 +247,14 @@
       também que algo pesado acelera mais que algo leve (HELERBROCK, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 3:</strong> Demonstração da Segunda Lei de Newton</p>
       <img src="Imagens/segunda lei.webp" alt="Demonstração da Segunda Lei de Newton" width="70%">
     </div>
     <legend class="ref-imagens-3">Fonte: MELO, 2023.
     </legend>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> TERCEIRA LEI DE NEWTON - LEI DE AÇÃO E REAÇÃO
       </h1>
     </div>
@@ -276,7 +276,7 @@
       <br>
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 4:</strong> Demonstração da Terceira Lei de Newton-Lei</p>
       <img src="Imagens/terceiralei.webp" alt="Demonstração da Terceira Lei de Newton-Lei" width="70%">
     </div>
