--- a/Ondas.html
+++ b/Ondas.html
@@ -154,7 +154,7 @@
   <br>
   <div class="conteudo">
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> FENOMENOS ONDULATORIOS </h1>
     </div>
     <br>
@@ -170,7 +170,7 @@
     </p>
     <br>
 
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 1:</strong> Onda e Suas Partes </p>
       <img src="Imagens/ondapartes.png" alt="partes das ondas" width="50%">
     </div>
@@ -203,7 +203,7 @@
     </p>
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> LONGITUDINAIS E TRANSVERSAIS </h1>
     </div>
     <br>
@@ -215,7 +215,7 @@
       agitá-la ela formará uma onda, irá até o ponto onde está presa e voltará a origem, assim como na figura 3.
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 2:</strong> Ondas Longitudinais e Transversais </p>
       <img src="Imagens/LongTrans.png" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -227,7 +227,7 @@
       bidimensional e tridimensional, onde cada uma ao se propagar de forma específica acaba tendo uma "características"
       próprias (LOOS, 2023).</p>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> TIPOS DE ONDAS </h1>
     </div>
     <br>
@@ -286,7 +286,7 @@
       dito no texto
       (GUILHERME, 2023). </p>
     <br>
-    <div id="center">
+    <div class="center">
       <h1 style="font-size: 12pt;"> FENOMENOS </h1>
     </div>
     <br>
@@ -298,7 +298,7 @@
       algo no caminho, mas continua propagando só que em um sentido diferente, assim como está sendo mostrado na imagem;
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 3:</strong> Refração </p>
       <img src="Imagens/refracao-luz.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -312,7 +312,7 @@
       (GOUVEIA, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 4:</strong> Ondas Longitudinais e Transversais </p>
       <img src="Imagens/difracao.jpg" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -326,7 +326,7 @@
       do corpo a luz será refletida ou não, assim como mostrado na imagem.
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 5:</strong> Absorção </p>
       <img src="Imagens/1-absorcao-reflexao-luz.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -342,7 +342,7 @@
       ou soltando as cordas até que a vibração seja parecida com a emitida pelo diapasão (MELÔ, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 6:</strong> Ressonância </p>
       <img src="Imagens/ressonancia-diapasao.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -359,7 +359,7 @@
       chocam e geram ruídos (MELÔ, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 7:</strong> Interferência </p>
       <img src="Imagens/interferencia-construtiva-destrutiva.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -373,7 +373,7 @@
       diferentes(amplitude, frequência e etc) (MELÔ, 2023).
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 8:</strong> Dispersão </p>
       <img src="Imagens/1-dispersao-luz-solar.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
@@ -386,7 +386,7 @@
       A polarização acontece quando duas ondas transversais estão “andando” juntas, mas ao passar por uma ferramenta chamada “polarizador” uma destas ondas é filtrada e apenas uma delas passa. Isso acontece quando você vai tirar uma foto e seu celular filtra as ondas para aparecer apenas o interessado na foto (MELÔ, 2023).      
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <p><strong class="bibliografia">Figura 9:</strong> Polarização </p>
       <img src="Imagens/polarizacao-feixe-luz.webp" alt="Longitudinais e Transversais" width="40%">
     </div>
