--- a/TermoFisica.html
+++ b/TermoFisica.html
@@ -154,8 +154,8 @@
   </div>
   <br>
   <div class="conteudo">
-    <div id="center">
-      <h1><strong class="textosTitulo"><em> TermoFísica </em> </strong></h1>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> TERMOFISICA </h1>
     </div>
     <br>
     <p class="margem">
@@ -184,8 +184,9 @@
       Irradiação Térmica: Transferência de calor por ondas eletromagnéticas</p>
     <p class="margem"></p>
     <br>
-    <div id="center">
-      <h1><strong class="textosTitulo"><em> Condução Térmica </em> </strong></h1>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> CONDUÇÃO TÉRMICA </h1>
+      <br>
     </div>
     <br>
     <p class="margem">A condução térmica é um processo de transferência de calor que ocorre quando há uma diferença de
@@ -211,9 +212,8 @@
           Aqui</a> </legend>
     </div>
     <br>
-    <div id="center">
-      <h1><strong class="textosTitulo"><em>Convecção Térmica </em> </strong></h1>
-      <br>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> CONVECÇÃO TÉRMICA </h1>
     </div>
     <div id="center">
       <img src="Imagens/conveccao-no-bule-5c2e5b51c413a.webp" width="75%" alt="Foto Satelite">
@@ -249,8 +249,8 @@
       oceânicas e a circulação atmosférica. Além disso, é um processo fundamental em diversas áreas da engenharia, como
       transferência de calor e mecânica dos fluidos (HELERBROCK, 2023).</p>
     <br>
-    <div id="center">
-      <h1><strong class="textosTitulo"><em>Irradiação Térmica </em> </strong></h1>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> IRRADIAÇÃO TÉRMICA </h1>
     </div>
     <br>
     <p class="margem">A radiação térmica é um tipo de transferência de calor que ocorre quando a energia é transferida
