--- a/Optica.html
+++ b/Optica.html
@@ -153,9 +153,9 @@
     </div>
   </div>
   <div class="conteudo">
-    <div id="center">
-    <h1><strong class="textosTitulo"><em> Optica </em> </strong></h1>
-  </div>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> OPTICA </h1>
+    </div>
     <br>
     <p>Parte da física que estuda as leis relativas às radiações luminosas e aos fenômenos da visão.(Dicionário Oxford
       Languages).
@@ -184,9 +184,9 @@
       sua interação com a matéria, ao levar em conta os conhecimentos da física contemporânea (HELERBROCK, 2023)
     </p>
     <br>
-    <div id="center">
-    <h1><strong class="textosTitulo"><em> Optica-Geometrica</em> </strong></h1>
-  </div>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> OPTICA-GEOMETRICA </h1>
+    </div>
     <br>
     <p class="margem">A luz é interpretada pela óptica geométrica como segmentos de uma linha reta, ou raios de luz. A
       direção e a
@@ -212,9 +212,9 @@
     <p class="margem">
       Fontes pontuais: se o tamanho da fonte de luz fosse considerado insignificante em comparação com o objeto que se
       pretendia iluminar (HELERBROCK, 2023).</p>
-      <div id="center">
-    <h1><strong class="textosTitulo"><em>Principios da Optica Geometrica</em> </strong></h1>
-  </div>
+      <div class="center">
+        <h1 style="font-size: 12pt;"> PRINCIPIOS DA OPTICA GEOMETRICA</h1>
+      </div>
     <br>
     <p class="margem">Essas ideias descrevem como os raios de luz agem em várias circunstâncias. Eles são verdadeiros
       quando os meios
@@ -257,9 +257,10 @@
     </legend>
   </div>
     <br>
-    <div id="center">
-    <h1><strong class="textosTitulo"><em> Cores </em> </strong></h1>
-  </div>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> CORES </h1>
+    </div>
+  
     <br>
     <p class="margem">Uma parte da luz branca que atinge um objeto é absorvida pelo objeto. A luz absorvida pode ser
       transferida
@@ -280,17 +281,17 @@
       três fatores (GOETHE, 2023).</p>
     <br>
 
-    <div id="center">
-    <h1><strong class="textosTitulo"><em>Luz Monocromatica </em> </strong></h1>
-  </div>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> LUZ MONOCROMATICA </h1>
+    </div>
     <br>
     <p class="margem">É aquela que apresenta idealmente uma única frequência, ou seja, uma única cor. A luz branca, por
       exemplo, é
       policromática, ou seja, é composta por diversas frequências de luz (GOETHE, 2023).</p>
     <br>
-    <div id="center">
-    <h1><strong class="textosTitulo"><em> Sistemas Opticos </em> </strong></h1>
-  </div>
+    <div class="center">
+      <h1 style="font-size: 12pt;"> SISTEMAS OPTICOS </h1>
+    </div>
     <br>
     <p class="margem">São dispositivos ópticos dispostos em diferentes formas e tamanhos para manipular a direção de
       propagação da luz. Existem sistemas ópticos de espelho e refrator (HELERBROCK, 2023).
@@ -346,7 +347,7 @@
 <br>
 </div>
 <br>
-
+</div>
   <div class="rodape">
 
     <div class="texto-rodape">
