--- a/Eletricidade.html
+++ b/Eletricidade.html
@@ -193,7 +193,7 @@
     <p class="margem">
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <img src="Imagens/OIG (1).jpeg" width="50%" alt="Foto Satelite">
 
     </div>
