--- a/CorrentesEletricas.html
+++ b/CorrentesEletricas.html
@@ -195,7 +195,7 @@
       variados.(ALVES,2023)
     </p>
     <br>
-    <div id="center">
+    <div class="center">
       <img src="Imagens/Corrente-continua-e-alternada-720.webp" alt="Foto Satelite" style="width: 51%;">
 
     </div>
@@ -213,7 +213,7 @@
       condutor durante
       um determinado período de tempo, no (SI) a intensidade é medida em Ampère (A), a intensidade pode ser calculada
       através da fórmula (ALVES, 2023):</p>
-    <div id="center">
+    <div class="center">
       <img src="Imagens/formula.png" alt="formula">
     </div>
     <br>
